# volatile_table

./: Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: aml_uart.rs
src/: access.rs  lib.rs  ptr.rs
tests/: volatile_macro.rs  volatile_table_macro.rs
