[package]
name = "volatile_table"
version = "0.0.1"
edition = "2024"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/UlinProject/volatile_table.git"
edition = "2024"

license = "Apache-2.0"
readme = "README.md"

[dependencies]
cluFullTransmute = {version = "1.4.2", default-features = false}
