[package]
name = "volatile_table"
version = "0.0.1"
edition = "2024"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/UlinProject/volatile_table.git"

license = "Apache-2.0"
readme = "README.md"

[dependencies]
cluFullTransmute = {version = "1.4.2", default-features = false}

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

